# fastapi-task

./: .flake8  .gitignore  Dockerfile  README.md  db_models.py  docker-compose.yml  exceptions.py  main.py  pyproject.toml  python_models.py  queries.py
app/: Dockerfile  main.py
app/config/: settings.py
app/db/: db.py  models.py
app/routers/: router.py  transactions.py  users.py
app/schemas/: enums.py  pydantic_models.py
app/services/: balance.py  queries.py  transactions.py  users.py
app/services/celery/: celery.py  tasks.py
