[tool.poetry]
name = "task"
version = "0.1.0"
description = ""
authors = ["Author <author@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.37"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"


[tool.poetry.group.dev.dependencies]
faker = "^19.10.0"
pylint = "^3.0.1"
pylint-pydantic = "^0.3.0"
pytest = "^7.4.2"
pytest-alembic = "^0.10.7"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
pytest-httpx = "^0.26.0"
pytest-mock = "^3.11.1"
pytest-mock-server = "^0.3.0"
pytest-xdist = "^3.3.1"
pre-commit = "^3.5.0"
mypy = "^1.7.0"
flake8 = "^7.0.0"
isort = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = "120"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["**/migrations/**"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    "migrations"
]
